@@ -1,1 +1,5 @@
-REGISTER_DEMO_TYPES = False ##Initialize the demo types
+REGISTER_DEMO_TYPES = False ##Initialize the demo types for tests only
+
+PROJECT_NAME = 'raptus.multilanguagefields'
+
+I18N_DOMAIN = 'raptus.multilanguagefields'
