@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_types" meta_type="Plone Types Tool">
- <object name="ComplexType" meta_type="Factory-based Type Information"/>
- <object name="SimpleFolder" meta_type="Factory-based Type Information"/>
- <object name="SimpleType" meta_type="Factory-based Type Information"/>
+ <object name="ComplexMultilingualType" meta_type="Factory-based Type Information"/>
+ <object name="SimpleMultilingualFolder" meta_type="Factory-based Type Information"/>
+ <object name="SimpleMultilingualType" meta_type="Factory-based Type Information"/>
 </object>
