@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
-<object name="SimpleType" meta_type="Factory-based Type Information"
+<object name="SimpleMultilingualType" meta_type="Factory-based Type Information"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title">Simple Type</property>
+ <property name="title">Simple Multilingual Type</property>
  <property name="description">A simple archetype</property>
  <property name="content_icon">document_icon.gif</property>
- <property name="content_meta_type">SimpleType</property>
+ <property name="content_meta_type">SimpleMultilingualType</property>
  <property name="product">raptus.multilanguagefields</property>
- <property name="factory">addSimpleType</property>
+ <property name="factory">addSimpleMultilingualType</property>
  <property name="immediate_view">base_edit</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">False</property>
