@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
-<object name="SimpleFolder" meta_type="Factory-based Type Information"
+<object name="SimpleMultilingualFolder" meta_type="Factory-based Type Information"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title">Simple Folder</property>
+ <property name="title">SimpleMultilingualFolder</property>
  <property name="description">A simple folderish archetype</property>
  <property name="content_icon">folder_icon.gif</property>
- <property name="content_meta_type">SimpleFolder</property>
+ <property name="content_meta_type">SimpleMultilingualFolder</property>
  <property name="product">raptus.multilanguagefields</property>
- <property name="factory">addSimpleFolder</property>
+ <property name="factory">addSimpleMultilingualFolder</property>
  <property name="immediate_view">base_edit</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">False</property>
