@@ -15,12 +15,8 @@ from Products.PloneTestCase import PloneTestCase as ptc
 from Products.PloneTestCase.layer import PloneSite
 from Products.PloneTestCase.layer import onsetup
 
-# When ZopeTestCase configures Zope, it will *not* auto-load products
-# in Products/. Instead, we have to use a statement such as:
-#   ztc.installProduct('SimpleAttachment')
-# This does *not* apply to products in eggs and Python packages (i.e.
-# not in the Products.*) namespace. For that, see below.
-# All of Plone's products are already set up by PloneTestCase.
+from Products.PloneTestCase.layer import ZCMLLayer
+
 
 @onsetup
 def setup_product():
@@ -32,29 +28,16 @@ def setup_product():
     integration tests.
     """
 
-    # Load the ZCML configuration for the example.tests package.
-    # This can of course use <include /> to include other packages.
-
     fiveconfigure.debug_mode = True
+    # patch to allow demo content types
+    from raptus.multilanguagefields import config
+    config.REGISTER_DEMO_TYPES = True
     import raptus.multilanguagefields
     zcml.load_config('configure.zcml', raptus.multilanguagefields)
     fiveconfigure.debug_mode = False
-
-    # We need to tell the testing framework that these products
-    # should be available. This can't happen until after we have loaded
-    # the ZCML. Thus, we do it here. Note the use of installPackage()
-    # instead of installProduct().
-    # This is *only* necessary for packages outside the Products.*
-    # namespace which are also declared as Zope 2 products, using
-    # <five:registerPackage /> in ZCML.
-
-    # We may also need to load dependencies, e.g.:
-    #   ztc.installPackage('borg.localrole')
     ztc.installPackage('raptus.multilanguagefields')
 
-# The order here is important: We first call the (deferred) function
-# which installs the products we need for this product. Then, we let
-# PloneTestCase set up this product on installation.
+
 
 setup_product()
 ptc.setupPloneSite()
@@ -85,7 +68,7 @@ class FunctionalTestCase(ptc.FunctionalTestCase):
             pass
 
     def afterSetUp(self):
-        roles = ('Member', 'Contributor')
-        self.portal.portal_membership.addMember('contributor',
-                                                'secret',
-                                                roles, [])
+        #self.portal.portal_languages.use_cookie_negotiation=1
+        self.portal.portal_languages.use_request_negotiation=1
+        self.portal.portal_languages.always_show_selector=1
+        self.portal.portal_languages.start_neutral=1
